--- a/staff/albert-fuente/mucho-layout/mucho-sass/style.sass
+++ b/staff/albert-fuente/mucho-layout/mucho-sass/style.sass
@@ -1,14 +1,8 @@
-$primary-font: 'Roboto', sans-serif
-
-$main-font-color: #c1c1c1
-$secondary-font-color: black
-$third-font-color: #555555
-$title-color: #ED3D42
-
-$main-background-color: #fff
-$secondary-background-color: #F4F4F4
-
-$border-color: #AEAEAE
+@import base-colors
+@mixin  easeIn
+    transition: all 0.5s ease-out
+@mixin filter
+    filter: invert(1)
 
 *
     box-sizing: border-box
@@ -66,39 +60,73 @@ header
 /*block images*/
 .imagenes
     display: grid
-    grid-template-columns:1fr 1fr 1fr
-    grid-gap: 3px
-    height:200vh
+    grid-template-columns:1fr 1fr 1fr 1fr
+    grid-auto-rows:0.5fr
+    grid-gap: 7px
+    height:180vh
+    
 /*element box from block images*/
 .imagenes__box
     background-size: 100%
-    background-image: url("https://placeimg.com/400/400/any")
     background-repeat: no-repeat
     background-position: center
+    background-size: cover
+
     &:hover
-        opacity:0.7
-        transition: opacity 500ms
+        opacity: 0.75
+        @include easeIn()
+        @include filter()
 
 .one
-    grid-column: 1/3
+  background-image: url("https://d3cffvogsu5dhv.cloudfront.net/wp-content/uploads-new/2019/06/19154127/01-634x452@2x.jpg")
+.two
+  background-image: url("https://d3cffvogsu5dhv.cloudfront.net/wp-content/uploads-new/2017/10/09084320/Thumbnail-634x452@2x.png")
+.three
+  background-image: url("https://d3cffvogsu5dhv.cloudfront.net/wp-content/uploads-new/2016/08/11024033/PayPal_Logo_Mucho-634x452@2x.png")
+.four
+  background-image: url("https://d3cffvogsu5dhv.cloudfront.net/wp-content/uploads-new/2019/03/04194725/Alpine_LHead_01-634x452@2x.jpg")
+.five
+  background-image: url("https://d3cffvogsu5dhv.cloudfront.net/wp-content/uploads-new/2019/02/06003449/190205_Paradigm_Headquarters-1273x909@2x.png")
+.six
+  background-image: url("https://d3cffvogsu5dhv.cloudfront.net/wp-content/uploads-new/2017/09/11021445/Dolby_Logo_Mucho-2-634x452@2x.png")
+.seven
+  background-image: url("https://d3cffvogsu5dhv.cloudfront.net/wp-content/uploads-new/2006/08/01171114/WallpaperThumb-634x452@2x.jpg")
+.eight
+  background-image: url("https://d3cffvogsu5dhv.cloudfront.net/wp-content/uploads-new/2018/02/28181600/Cover_Vagina_Cottin_feature-634x452@2x.jpg")
+.nine
+  background-image: url("https://d3cffvogsu5dhv.cloudfront.net/wp-content/uploads-new/2018/02/13232343/Mucho_Baker_Case-study_Image_8000x5333px_1-634x452@2x.jpg")
+.ten
+  background-image: url("https://d3cffvogsu5dhv.cloudfront.net/wp-content/uploads-new/2018/06/12073017/Margiela_Mucho_Spine-634x452@2x.jpg")
+.eleven
+  background-image: url("https://d3cffvogsu5dhv.cloudfront.net/wp-content/uploads-new/2019/03/04194725/Alpine_LHead_01-634x452@2x.jpg")
+.twelve
+  background-image: url("https://d3cffvogsu5dhv.cloudfront.net/wp-content/uploads-new/2019/06/19154127/01-634x452@2x.jpg")
+
+.three
+    grid-column: 3/5
+    grid-row:1/3
 
 .seven
-    grid-column: 2/4
+    grid-column: 1/3
     grid-row:3/5
 
 /*element texting from block images*/
 .imagenes__texting
     height:100%
     width: 100%
-    text-align: center
-    left: 0
+    text-align: left
+    padding-left:5%
+    padding-top: 2%
     color: transparent
     margin: 0
     &:hover
-        opacity: 1 !important
-        color: $secondary-font-color
+        z-index: 2
+        color: rgba($secondary-font-color,1) !important
     > h4
         color: $title-color
+
+.paradigm:hover
+  color: #333 !important
 
 /*element about from block images*/
 .imagenes__about
@@ -107,7 +135,8 @@ header
     width: 100%
     letter-spacing: 2px
     padding: 5px
-
+    > h4 
+        color: $title-color
 /*modifier from block images*/
 .imagenes--link
     color: $main-font-color
@@ -115,10 +144,10 @@ header
 
 /* CONTACT */
 .contact
-    padding-top:100px
+    padding-top:7%
     color: $third-font-color
     font-size: 20px
-    padding-left: 10%
+    padding-left: 5%
 
 /*CITIES*/
 /*block cities*/
@@ -130,6 +159,7 @@ header
 .cities--city
     color: $title-color
     font-weight: bold
+    font-size: 20px
 
 .cities div
     padding: 20%
@@ -143,9 +173,17 @@ footer
 
 .media
     display: flex
+    justify-content: flex-start
+    align-items: flex-start
 
 .media p
-    padding: 10px
+    padding-right: 10px
+
+@media(max-width:800px)
+    .cities
+        display: grid
+        grid-template-columns: 50% 50%
+        font-size: 16px
 
 @media(max-width:500px)
     .barra
@@ -165,14 +203,16 @@ footer
         display: grid
         grid-template-columns:1fr
         grid-gap: 3px
-        height: 500vh
+        height: 600vh
     
-    .one
+    .three
         grid-column: 1/2
-    
+        grid-row:3/4
+
     .seven
         grid-column: 1/2
-        grid-row:1/2
+        grid-row:4/5
+
     
     .mobile
         display: inline-block
@@ -187,7 +227,7 @@ footer
     
     /* CONTACT */
     .contact
-        padding-top:100px
+        padding-top:16%
         font-size: 12px
     
     /*CITIES*/
@@ -219,4 +259,3 @@ footer
 
 
 
-    /*COMO APLICAR CORRECTAMENTE MODIFICADORES EN BEM ?????!!!!! */
