add desktop breakpoint css rules

--- a/staff/jaume-villarreal/mucho-layout/mobile-first/css/breakpoint_1024.sass
+++ b/staff/jaume-villarreal/mucho-layout/mobile-first/css/breakpoint_1024.sass
@@ -29,3 +29,11 @@ $layout-breakpoint-desktop: 1024px
     
     .secondary-nav
         display: none
+    
+    .contact-set
+        flex-direction: row
+        flex-direction: start-flex
+    
+    .contact-card
+        width: 20%
+    
