--- a/staff/jaume-villarreal/mucho-layout/mobile-first/css/comp-contact-card.sass
+++ b/staff/jaume-villarreal/mucho-layout/mobile-first/css/comp-contact-card.sass
@@ -4,7 +4,9 @@
     margin-bottom: 3rem
     font-style: normal
     font-size: .9rem
+    font-weight: 300
     &__city
+        font-weight: 400
         font-size: .85rem
         color: #e00000
     &__phone
