--- a/staff/jaume-villarreal/mucho-layout/mobile-first/css/comp-mosaic.sass
+++ b/staff/jaume-villarreal/mucho-layout/mobile-first/css/comp-mosaic.sass
@@ -14,7 +14,7 @@
             align-items: center
             transition: opacity .5s ease-out
             &:hover
-                opacity: .3
+                opacity: .25
 
     &__text
         position: absolute
@@ -23,11 +23,11 @@
         left: 0
         padding: 5% 0 0 2%
         font-size: 1.25rem
-        h3
+        >h3
             margin: 0
             color: black
             font-weight: normal
-        p
+        >p
             margin: 0
             color: #999
 
