--- a/staff/jaume-villarreal/mucho-layout/mobile-first/css/components.sass
+++ b/staff/jaume-villarreal/mucho-layout/mobile-first/css/components.sass
@@ -3,7 +3,7 @@
     margin: 0 auto .5rem
 
 .foot_info
-    width: 90%
+    width: 95%
     margin: 0 auto
 
 .contact
@@ -19,8 +19,8 @@
     >a
         text-decoration: none
         color: inherit
-    >a:visited
-        color: inherit
+        &:visited
+            color: inherit
             
 .contact-set
     display: flex
