--- a/staff/jaume-villarreal/mucho-layout/mobile-first/css/style.css
+++ b/staff/jaume-villarreal/mucho-layout/mobile-first/css/style.css
@@ -4,7 +4,7 @@
 }
 
 .foot_info {
-  width: 90%;
+  width: 95%;
   margin: 0 auto;
 }
 
@@ -151,7 +151,7 @@
   transition: opacity 0.5s ease-out;
 }
 .mosaic__tile img:hover {
-  opacity: 0.3;
+  opacity: 0.25;
 }
 .mosaic__text {
   position: absolute;
@@ -161,12 +161,12 @@
   padding: 5% 0 0 2%;
   font-size: 1.25rem;
 }
-.mosaic__text h3 {
+.mosaic__text > h3 {
   margin: 0;
   color: black;
   font-weight: normal;
 }
-.mosaic__text p {
+.mosaic__text > p {
   margin: 0;
   color: #999;
 }
@@ -194,8 +194,10 @@
   margin-bottom: 3rem;
   font-style: normal;
   font-size: 0.9rem;
+  font-weight: 300;
 }
 .contact-card__city {
+  font-weight: 400;
   font-size: 0.85rem;
   color: #e00000;
 }
@@ -302,8 +304,8 @@
   }
 
   .contact-business {
-    font-weight: 300;
-    font-size: 1.75rem;
+    font-weight: 400;
+    font-size: 1.7rem;
     line-height: 2rem;
     margin-bottom: 4rem;
   }
@@ -351,6 +353,59 @@
 
   .secondary-nav {
     display: none;
+  }
+
+  .contact-set {
+    flex-direction: row;
+    flex-direction: start-flex;
+  }
+
+  .contact-card {
+    width: 20%;
+  }
+}
+@media (min-width: 1103px) {
+  .top-navigation__presentation {
+    font-size: 1.25rem;
+    line-height: 1.5rem;
+  }
+  .top-navigation__max-nav > ul > li > a {
+    font-size: 1.25rem;
+  }
+
+  .mosaic {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: 5%;
+    grid-gap: 2px;
+  }
+  .mosaic__tile {
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+  }
+  .mosaic__article {
+    width: 100%;
+  }
+
+  .mosaic__tile--expand-grid1 {
+    grid-area: 2/1/4/3;
+  }
+
+  .mosaic__tile--expand-grid2 {
+    grid-area: 4/1/6/3;
+  }
+
+  .mosaic__tile--expand-grid3 {
+    grid-area: 4/1/8/3;
+  }
+
+  .mosaic__tile--expand-grid4 {
+    grid-area: 6/1/10/3;
+  }
+
+  .mosaic__tile--expand-grid5 {
+    grid-area: 8/1/12/3;
   }
 }
 
