--- a/staff/manuel-galvez/mucho-layout/all/input.sass
+++ b/staff/manuel-galvez/mucho-layout/all/input.sass
@@ -1,1 +1,274 @@
+@import reset
 
+$desktop: 1100px
+$tablet-min: 768px
+$tablet-max: 1100px
+
+html, body 
+    box-sizing: border-box
+    font-family: 'Roboto', sans-serif
+    line-height: 1.3
+    color: #AEAEAE
+    font-size: 1.3vw 
+
+body
+    width: 98.5vw 
+    margin: 0 auto
+
+a 
+    color: inherit
+    text-decoration: none
+
+
+.header
+    display: flex
+    flex-flow: row wrap
+    justify-content: space-between
+    padding: 35px 16px
+    height: 8vw
+
+    &__logo
+        flex: 1
+        display: flex
+        align-items: flex-start
+        padding: 0 16px
+
+    &__quote
+        flex: 3
+        padding: 0 16px
+
+    &__menu
+        flex: 3
+        display: flex
+        justify-content: flex-end
+        padding: 0 16px
+
+.menu
+
+    &__top
+        list-style: none 
+        display: flex
+
+    &__bottom
+        display: none
+
+    &__item
+        padding-left: 15px
+
+
+.photo-grid
+    display: grid
+    grid-template-columns: repeat(4, 1fr)
+    grid-template-rows: repeat(9, 1fr)
+    grid-gap: 5px
+
+    &__item
+        width: 100% 
+        height: 100%
+
+    &__item>img 
+        object-fit: cover
+        width: 100%
+        height: 100%
+    
+.item-3
+    grid-column: 3 / span 2 
+    grid-row: 1 / span 2
+
+.item-6
+    grid-column: 1 / span 2
+    grid-row: 3 / span 2
+
+.item-11
+    grid-column: 3 / span 2
+    grid-row: 4 / span 2
+
+.item-12
+    grid-column: 1 / span 2
+    grid-row: 6 / span 2
+
+.item-17
+    grid-column: 1 / span 2
+    grid-row: 8 / span 2
+
+
+.card
+    height:100%
+    width: 100%
+    box-sizing: border-box
+    padding: 24px 28px
+    color: #000
+
+    &--gray-back
+        background: #f4f4f4
+    
+    &--light-text
+        color: #555
+
+    &__title
+
+        margin-bottom: 23px
+    
+        /* Spaces */
+
+        &--extra-margin
+            margin-bottom:1.6rem
+        
+        /* Font colors and style */
+
+        &--red
+            color: red
+            font-weight: bold
+        
+        /* Font sizes */
+
+        &--medium
+            font-size: 1rem
+        
+        &--small
+            font-size: 0.8rem
+
+    &__body
+        font-size: inherit
+
+        &--small-text
+            font-size: 0.7rem
+
+.quote
+    display: flex
+    justify-content: flex-start
+    align-items: center
+    height: 8rem
+    max-width: 50vw
+    margin-top: 3rem
+    margin-bottom: 1rem
+    padding: 0 1.6rem
+    
+
+    &__body
+        color: #555
+        font-size: 1.2vw
+    
+.location
+    display: flex
+    justify-content: space-between
+
+
+@media only screen and (min-width : $tablet-min) and (max-width: $tablet-max)
+
+    .header
+        font-size: 1.5vw
+
+        &__logo
+            display: flex
+            align-items: flex-start
+            padding: 0 16px
+
+        &__quote
+            display: none
+
+        &__menu
+            display: flex
+            justify-content: flex-end
+            padding: 0 16px
+
+    .menu
+        display: flex
+        flex-direction: column
+        justify-content: space-around
+
+        &__bottom
+            align-self: flex-end
+            display: flex
+
+        &__item
+            display: flex
+
+        >*i 
+            margin-left: 10px
+        
+
+    .photo-grid
+        display: grid
+        grid-template-columns: repeat(2, 1fr)
+        grid-template-rows: repeat(11, 1fr)
+
+        &__item
+            width: 100% 
+            height: 100%
+
+        &__item>img 
+            object-fit: cover
+            width: 100%
+            height: 100%
+        
+        /* Here's why first version should've been mobile */
+        .item-3
+            grid-column: 1
+            grid-row: span 1
+
+        .item-6
+            grid-column: 2
+            grid-row: span 1
+
+        .item-11
+            grid-column: 1
+            grid-row: span 1
+
+        .item-12
+            grid-column: 2
+            grid-row: span 1
+
+        .item-17
+            grid-column: 1
+            grid-row: span 1
+    
+    .card
+        &__title
+            font-size: 1.1rem
+
+        &__body
+            font-size: 1.4rem
+
+            &--small-text
+                font-size: 1.1rem
+
+    .quote
+        height: 15rem
+        max-width: 60vw
+        margin-top: 3rem
+        margin-bottom: 1rem
+        padding: 0 1.8rem
+
+        &__body
+            font-size: 1.8rem
+    
+    .location
+        height:35vw
+        flex-flow: column wrap
+        justify-content: space-between
+
+
+    
+        
+        
+        
+        
+
+
+
+
+
+
+
+    
+
+
+    
+
+
+
+
+    
+    
+        
