--- a/staff/jorge-garces/mucho-layout/desktop/output.css
+++ b/staff/jorge-garces/mucho-layout/desktop/output.css
@@ -3,7 +3,7 @@
   border: 0;
   padding: 0px;
   box-sizing: border-box;
-  color: rgb(170, 170, 170);
+  color: #aaaaaa;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -18,27 +18,22 @@ body {
   padding: 25px 0px 10px 20px;
   border-bottom: 1px solid rgba(128, 128, 128, 0.452);
 }
-
 .header__logo {
   width: 4.5rem;
   align-self: flex-start;
 }
-
 .header__hamburger {
   margin: 15px 15px 10px auto;
 }
-
 .header__navigation-top {
   display: none;
 }
-
 .header__navigation-bottom {
   display: flex;
   justify-content: flex-start;
   border-bottom: 1px solid rgba(128, 128, 128, 0.452);
   font-size: 0.9rem;
 }
-
 .header__info {
   display: none;
 }
@@ -61,11 +56,9 @@ body {
   flex-wrap: wrap;
   width: 100%;
 }
-
 .mosaic__image {
   padding: 2px;
 }
-
 .mosaic img {
   width: 100%;
   height: 100%;
@@ -77,13 +70,16 @@ body {
   display: block;
   height: 50vw;
 }
-
+.articulo__h4 {
+  font-size: 0.8rem;
+  color: rgba(209, 22, 22, 0.815);
+  margin-bottom: 25px;
+}
 .articulo__title {
   font-size: 0.8rem;
   color: rgba(209, 22, 22, 0.815);
   margin-bottom: 25px;
 }
-
 .articulo__content {
   color: #000;
 }
@@ -101,13 +97,11 @@ body {
   margin-bottom: 20px;
   padding: 20px;
 }
-
 .articulo2__title {
   font-family: Arial, Helvetica, sans-serif;
   color: red;
   font-size: 0.8rem;
 }
-
 .articulo2__content {
   color: gray;
   font-family: Arial, Helvetica, sans-serif;
@@ -118,30 +112,25 @@ body {
   margin-left: 20px;
   margin-bottom: 30px;
 }
-
 .social__content {
   font-size: 0.8rem;
   margin-bottom: 15px;
 }
-
 .social__icons {
   margin-bottom: 15px;
 }
 
-/* BREAKPOINTS */
 @media (min-width: 768px) {
   .header {
     border: none;
+    justify-content: space-between;
   }
-
   .header__navigation-bottom {
     border: 0px;
   }
-
   .header__hamburger {
     display: none !important;
   }
-
   .header__navigation-top {
     display: flex;
   }
@@ -149,17 +138,10 @@ body {
   .navlist {
     display: flex;
     list-style: none;
-    /* margin: 10px;
-    padding: 10px; */
     font-size: 0.8rem;
   }
-
   .navlist__item {
     padding-right: 15px;
-  }
-
-  .header {
-    justify-content: space-between;
   }
 
   .nav-helper {
@@ -175,7 +157,6 @@ body {
   .mosaic__image {
     width: 50%;
   }
-
   .mosaic img {
     max-width: 100%;
     max-height: 100%;
@@ -189,6 +170,9 @@ body {
   .footer__links {
     display: flex;
     flex-wrap: wrap;
+  }
+  .footer__text {
+    width: 60%;
   }
 
   .articulo {
@@ -226,14 +210,11 @@ body {
     font-size: 1.4rem;
   }
 }
-
 @media (min-width: 1025px) {
   .header {
     display: flex;
     justify-content: space-between;
-    /* justify-content: space-between; */
   }
-
   .header__info {
     display: flex;
     justify-content: space-around;
@@ -256,10 +237,9 @@ body {
 
   .mosaic {
     display: grid;
-    grid-template-columns: repeat(4, 25%);
+    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(9, 1fr);
   }
-
   .mosaic__image {
     width: 100%;
     height: auto;
@@ -308,7 +288,9 @@ body {
 
   .footer__links {
     display: flex;
-    /* flex-wrap: wrap; */
+  }
+  .footer__text {
+    font-size: 1.4rem;
   }
 
   .articulo2 {
@@ -337,8 +319,6 @@ body {
   .social .fa-linkedin {
     margin-right: 15px;
   }
-
-  .footer__text {
-    font-size: 1.4rem;
-  }
 }
+
+/*# sourceMappingURL=output.css.map */
