improves grid layout for desktop version

--- a/staff/jaume-villarreal/mucho-layout/mobile-first/css/comp-mosaic.sass
+++ b/staff/jaume-villarreal/mucho-layout/mobile-first/css/comp-mosaic.sass
@@ -6,7 +6,7 @@
         width: 100%
         position: relative
         margin: .5% 0
-        img
+        >img
             width: 100%
             height: auto
             display: flex
