--- a/staff/jaume-villarreal/mucho-layout/mobile-first/css/breakpoint_1102.sass
+++ b/staff/jaume-villarreal/mucho-layout/mobile-first/css/breakpoint_1102.sass
@@ -15,27 +15,30 @@ $layout-breakpoint-desktop: 1103px
                     
     .mosaic
         display: grid
-        grid-template-columns: 1fr 1fr 1fr 
-        grid-auto-rows: 5%
+        grid-template-columns: repeat(3 , 1fr) 
+        grid-template-rows: repeat(12, 1fr)
         grid-gap: 2px
-        &__tile 
+        &__tile
             width: 100%
-            height: auto
-            overflow: hidden
+            > img
+                width: 100%
+                height: 100%
+                object-fit: cover
+
         &__article
             width: 100%
     
-    .mosaic__tile--expand-grid1
+    .tile--expand-grid1
          grid-area: 2 / 1 / 4 / 3
 
-    .mosaic__tile--expand-grid2
+    .tile--expand-grid2
          grid-area: 4 / 1 / 6 / 3
     
-    .mosaic__tile--expand-grid3
-         grid-area: 4 / 1 / 8 / 3
+    .tile--expand-grid3
+         grid-area: 6 / 1 / 8 / 3
     
-    .mosaic__tile--expand-grid4
-         grid-area: 6 / 1 / 10 / 3
+    .tile--expand-grid4
+         grid-area: 8 / 1 / 10 / 3
     
-    .mosaic__tile--expand-grid5
-         grid-area: 8 / 1 / 12 / 3
+    .tile--expand-grid5
+         grid-area: 10 / 1 / 12 / 3
