add font-size rules for 1400px display

--- a/staff/jaume-villarreal/mucho-layout/mobile-first/css/breakpoint_1102.sass
+++ b/staff/jaume-villarreal/mucho-layout/mobile-first/css/breakpoint_1102.sass
@@ -2,16 +2,16 @@
 $layout-breakpoint-desktop: 1103px
 
 @media (min-width: $layout-breakpoint-desktop)
-    .top-navigation
+    // .top-navigation
         
-        &__presentation
-            font-size: 1.25rem
-            line-height: 1.5rem
-        &__max-nav
-            >ul
-                >li
-                    >a
-                        font-size: 1.25rem
+    //     &__presentation
+    //         font-size: 1.25rem
+    //         line-height: 1.5rem
+    //     &__max-nav
+    //         >ul
+    //             >li
+    //                 >a
+    //                     font-size: 1.25rem
                     
     .mosaic
         display: grid
