--- a/staff/adria-arquimbau/mucho-layout/with BEM/output.css
+++ b/staff/adria-arquimbau/mucho-layout/with BEM/output.css
@@ -2,10 +2,11 @@
   margin: 0;
   padding: 0;
   border: 0;
-  font-family: Helvetica, sans-serif;
+  font-family: Helvetica;
   color: rgb(184, 184, 184);
 }
 
+/* cabecera */
 .header {
   display: flex;
   flex-wrap: wrap;
@@ -23,6 +24,7 @@
   opacity: 20%;
 }
 
+/* navegador superior, services, industries */
 .nav{
   padding: 0px;
   width: 100%;
@@ -36,13 +38,49 @@
   margin: 20px;
 }
 
-/* .contenedorImg{
-  
-} */
+/* Imagenes principales */
 .contImg--imgnormal{
   width: 100%;
   height: 100%;
 }
+
+/* contenedor inferior info */
+.contInferior{
+  display: grid;
+}
+.contInferior__bloque{
+  width: 100%;
+  background-color:  rgb(184, 184, 184);
+  padding: 5px 10px 5px 5px;
+  grid-gap: 5px;
+}
+.contInferior--text{
+  color: rgb(0, 0, 0);
+  text-size-adjust: 20px;
+  padding: 10px;
+}
+.contInferior--titulo{
+  color: red;
+  padding: 10px;
+}
+
+/* footer */
+.footer{
+  display: grid;
+  justify-content: space-evenly;
+  width: 100%;
+}
+.footer__copyright{
+  background-color: rgb(95, 226, 43);
+  width: 70%
+}
+.footer__rrss{
+  background-color: blueviolet;
+  width: 30%;
+}
+
+
+
 
 
 /*# sourceMappingURL=output.css.map */
