--- a/staff/carolina-zhou/mucho-layout/all-final/components.sass
+++ b/staff/carolina-zhou/mucho-layout/all-final/components.sass
@@ -112,10 +112,12 @@ a:hover
         &__article-title 
             color: $subtitle-color
             margin: 1em 0 0 1em
+            font-size: 14px
 
         &__article-text 
             color: $base-color-2
             margin: 1em 0 0 1em
+            font-size: 12px
 
 .footer 
     padding: 25px
@@ -229,7 +231,7 @@ a:hover
 
         &__article 
             margin: 3px
-            min-width: 45%
+            max-width: 45%
 
     .footer__text 
         width: 65%
