--- a/staff/jorge-garces/mucho-layout/desktop/index.sass
+++ b/staff/jorge-garces/mucho-layout/desktop/index.sass
@@ -54,10 +54,32 @@ body
 
     &__image
         padding: 2px
+        position: relative
+
 
     img
         width: 100%
         height: 100%
+
+.card
+    position: absolute
+    height: 100%
+    width: 100%
+    background-color: white
+    padding: 20px
+    opacity: 0
+
+    &__title
+        color: black
+        font-size: 0.8rem
+
+    &__content
+        font-size: 1rem
+
+    &:hover 
+        opacity: 1
+        transition: opacity .3s ease-out
+        background-color: rgba(255, 255, 255, 0.9)
 
 .articulo 
     background-color: rgba(128, 128, 128, 0.116)
