--- a/staff/jorge-garces/mucho-layout/desktop/output.css
+++ b/staff/jorge-garces/mucho-layout/desktop/output.css
@@ -58,10 +58,32 @@ body {
 }
 .mosaic__image {
   padding: 2px;
+  position: relative;
 }
 .mosaic img {
   width: 100%;
   height: 100%;
+}
+
+.card {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: white;
+  padding: 20px;
+  opacity: 0;
+}
+.card__title {
+  color: black;
+  font-size: 0.8rem;
+}
+.card__content {
+  font-size: 1rem;
+}
+.card:hover {
+  opacity: 1;
+  transition: opacity 0.3s ease-out;
+  background-color: rgba(255, 255, 255, 0.9);
 }
 
 .articulo {
