--- a/staff/manuel-galvez/mucho-layout/all/input.sass
+++ b/staff/manuel-galvez/mucho-layout/all/input.sass
@@ -1,8 +1,7 @@
 @import reset
 
-$desktop: 1100px
-$tablet-min: 768px
-$tablet-max: 1100px
+$break-min: 768px
+$break-max: 1100px
 
 html, body 
     box-sizing: border-box
@@ -154,7 +153,7 @@ a
     justify-content: space-between
 
 
-@media only screen and (min-width : $tablet-min) and (max-width: $tablet-max)
+@media only screen and (min-width : $break-min) and (max-width: $break-max)
 
     .header
         font-size: 1.5vw
@@ -250,25 +249,102 @@ a
 
 
     
+@media only screen and (max-width : $break-min)
+
+    .header
+        font-size: 4.5vw
+        display: flex
+        flex-flow: column nowrap
         
+
+        &__logo
+            padding: 0 16px
+
+        &__quote
+            display: none
+
+        &__menu
+            display: flex
+            flex-flow: column wrap
+            justify-content: center
+            padding: 0 16px
+
+    .menu
+        display: flex
+        flex-direction: column wrap
+        align-items: flex-start
+        justify-content: flex-start
+
+        &__top
+            display: none
+
+        &__bottom
+            align-self: flex-end
+            display: flex
+
+        &__item
+            display: flex
+
+        >*i 
+            margin-left: 10px
         
+
+    .photo-grid
+        display: grid
+        grid-template-columns: 1fr
+        grid-template-rows: repeat(21, 1fr)
+
+        &__item
+            width: 100% 
+            height: 100%
+
+        &__item>img 
+            object-fit: cover
+            width: 100%
+            height: 100%
         
-        
+        /* Here's why first version should've been mobile */
+        .item-3
+            grid-column: 1
+            grid-row: span 1
 
+        .item-6
+            grid-column: 1
+            grid-row: span 1
 
+        .item-11
+            grid-column: 1
+            grid-row: span 1
 
+        .item-12
+            grid-column: 1
+            grid-row: span 1
 
-
-
-
+        .item-17
+            grid-column: 1
+            grid-row: span 1
     
+    .card
+        &__title
+            font-size: 1.1rem
 
+        &__body
+            font-size: 1.4rem
 
+            &--small-text
+                font-size: 1.1rem
+
+    .quote
+        height: 15rem
+        max-width: 60vw
+        margin-top: 3rem
+        margin-bottom: 1rem
+        padding: 0 1.8rem
+
+        &__body
+            font-size: 1.8rem
     
-
-
-
-
-    
-    
-        
+    .location
+        height:35vw
+        flex-flow: column wrap
+        justify-content: space-between
