--- a/staff/manuel-galvez/mucho-layout/all/input.sass
+++ b/staff/manuel-galvez/mucho-layout/all/input.sass
@@ -252,38 +252,52 @@ a
 @media only screen and (max-width : $break-min)
 
     .header
-        font-size: 4.5vw
+        font-size: 4vw
         display: flex
         flex-flow: column nowrap
-        
+        justify-content: center
+        height: 22vh
+        padding: 0
 
         &__logo
-            padding: 0 16px
+            flex: 1
+            display: flex
+            align-items: flex-end
+            padding-bottom: 20px
 
         &__quote
             display: none
 
         &__menu
+            flex: 1
             display: flex
+            justify-content: flex-end
+            padding: 0
             flex-flow: column wrap
-            justify-content: center
-            padding: 0 16px
 
     .menu
         display: flex
         flex-direction: column wrap
         align-items: flex-start
         justify-content: flex-start
+        border-bottom: 1px solid #AEAEAE
+        border-top: 1px solid #AEAEAE
 
         &__top
             display: none
 
         &__bottom
-            align-self: flex-end
             display: flex
+            flex-direction: column
 
         &__item
+            font-size: 2.5rem
             display: flex
+            width: 100vw
+            padding: 12px 16px
+
+            &:last-child
+                border-top: 1px solid #AEAEAE
 
         >*i 
             margin-left: 10px
@@ -326,13 +340,13 @@ a
     
     .card
         &__title
-            font-size: 1.1rem
+            font-size: 2.2rem
 
         &__body
-            font-size: 1.4rem
+            font-size: 2.8rem
 
             &--small-text
-                font-size: 1.1rem
+                font-size: 2.2rem
 
     .quote
         height: 15rem
@@ -342,9 +356,9 @@ a
         padding: 0 1.8rem
 
         &__body
-            font-size: 1.8rem
+            font-size: 2.4rem
     
     .location
         height:35vw
-        flex-flow: column wrap
+        flex-direction: column
         justify-content: space-between
