--- a/staff/adria-arquimbau/mucho-layout/with BEM/style.css
+++ b/staff/adria-arquimbau/mucho-layout/with BEM/style.css
@@ -1,180 +1,371 @@
-* {
+body {
+    box-sizing: border-box;
+    margin: 0;
+    border: 0;
+    padding: 0;
+    font-family: sans-serif;
+    font-weight: 300;
+    color: darkgray;
+  }
+
+  a {
+    text-decoration: none;
+    color: darkgray;
+  }
+  
+  a:hover {
+    color: black;
+  }
+  
+  .header {
+    padding: 25px;
+  }
+  .header__main {
+    height: 40px;
+    position: sticky;
+    top: 0px;
+    background-color: white;
+    border-bottom: 1px solid darkgray;
+    display: flex;
+    justify-content: space-between;
+  }
+  .header__logo {
     margin: 0;
     padding: 0;
-    border: 0;
-    font-family: Helvetica, sans-serif;
-    color: rgb(184, 184, 184);
-    font-weight: normal;
-}
-
-.body {
-    width: 99vw;
-    margin: 0 auto;
-    /* border: 1px solid; */
-}
-
-.header {
-    flex-wrap: wrap;
+    max-width: 90px;
+  }
+  .header__text {
+    display: none;
+  }
+  .header__menu--icon {
+    align-self: center;
+    max-width: 40px;
+  }
+  .header__menu--hidden {
+    display: none;
+  }
+  .header__submenu {
     display: flex;
-    padding: 20px;
-}
-
-.head1 {
-    width: 70%;
-}
-
-
-.head2 {
-    width: 30%;
-}
-
-
-.head2 img {
-    float: right;
-
-}
-
-.nav {
-    display: flex;
-    padding: 20px;
-    border: 1px;
-    flex-direction: column;
-}
-
-.footer {
-    padding: 20px;
-    display: flex;
-    text-align: center;
-    
-}
-
-.footer .cr {
-    width: 85%;
-}
-
-.footer .rrss {
-    justify-content: space-around;
-    width: 15%;
-    flex-wrap: wrap;
-}
-
-.contenedorNavInf {
-    display: grid;
-    grid-gap: 5px;
-    padding: 5px 10px 5px 5px;
-}
-
-.footerBox p {
+    justify-content: space-between;
+    border-bottom: 1px solid darkgray;
+  }
+  .header__submenu--text {
+    margin-left: 0;
+  }
+  .header__submenu--text:hover {
     color: black;
-    text-size-adjust: 20px;
-}
-
-.footerBox h5 {
-    color: red;
-}
-
-.footerBox {
-    background-color: #F4F4F4;
-    color: white;
-    padding: 10px;
-}
-
-.article {
-    display: grid;
-    grid-gap: 5px;
-}
-.article img {
+  }
+  .header__submenu--icon {
+    width: 25px;
+    height: 25px;
+    margin-right: 7px;
+    align-self: center;
+  }
+  .header__submenu--hidden {
+    display: none;
+  }
+  
+  .main__content {
+    padding: 5px;
+  }
+  .main__imagen {
+    display: flex;
+    justify-content: space-between;
+    display: block;
+    position: relative;
+    margin: 0;
+  }
+  .main__reveal {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+  .main__title {
+    color: black;
+    position: absolute;
+    margin: 1em 0 0 1em;
+    font-size: 1rem;
+    width: 300px;
+  }
+  .main__subtitle {
+    position: absolute;
+    margin: 3em 0 0 1em;
+    font-size: 1rem;
+  }
+  .main__figure {
+    margin: 0 0 5px 0;
+  }
+  .main__img {
+    display: block;
     width: 100%;
-    height: 100%;
-}
-
-.footer {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-}
-
-
-@media (min-width: 1200px) {
-
-    .contenedorNavInf {
-        grid-template-columns: 33% 33% 33%;
+  }
+  .main__img:hover {
+    opacity: 0.05;
+    transition: opacity 500ms;
+  }
+  .main__article {
+    margin-bottom: 5px;
+    padding: 20px;
+    min-height: 250px;
+    background-color: #f0f0f0;
+  }
+  .main__article--title {
+    color: red;
+    margin: 1em 0 0 1em;
+    font-size: 14px;
+  }
+  .main__article--text {
+    color: black;
+    margin: 1em 0 0 1em;
+    font-size: 12px;
+  }
+  
+  .footer {
+    padding: 25px;
+  }
+  .footer__address {
+    font-style: normal;
+    color: grey;
+    padding: 5px;
+  }
+  .footer__city--branch {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+  .footer__branch--name {
+    color: red;
+    margin-bottom: 0;
+  }
+  .footer__branch--info {
+    margin: 0;
+  }
+  .footer__social--media {
+    margin-top: 2em;
+    color: darkgray;
+  }
+  .footer__list {
+    display: flex;
+    margin-left: 15px;
+    padding: 0;
+  }
+  .footer__list--item {
+    padding-right: 15px;
+    list-style: none;
+  }
+  .footer__list-item:hover {
+    color: black;
+  }
+  .footer__last--line {
+    display: flex;
+    color: darkgray;
+  }
+  .footer__copyright {
+    margin-right: 1em;
+  }
+  
+ 
+  @media (min-width: 480px) {
+    .header__main {
+      border-bottom: none;
     }
-    .article {
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-
+    .header__menu--icon {
+      display: none;
     }
-    .bigImg {
-        grid-column: 1 / 3;
-        grid-row: 1 / 3;
+    .header__menu--hidden {
+      display: flex;
     }
-    .bigImg2 {
-        grid-column: 3 / 5;
-        grid-row: 3 / 5;
+    .header__menu--item {
+      padding-left: 15px;
+      list-style: none;
     }
-}
-
-@media (max-width: 1200px) and (min-width: 900px) {
-
-    .contenedorNavInf {
-        grid-template-columns: 33% 33% 33%;
+    .header__menu--item:hover {
+      color: black;
     }
-    .article {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-
+    .header__sub {
+      display: flex;
+      justify-content: flex-end;
     }
-    .bigImg {
-        grid-column: 1 / 3;
-        grid-row: 1 / 3;
+    .header__submenu {
+      border-bottom: none;
+      margin-left: 1em;
     }
-    .bigImg2 {
-        grid-column: 3 / 5;
-        grid-row: 3 / 5;
+    .header__submenu--icon {
+      margin-left: 10px;
     }
-}
-
-@media (max-width: 900px) and (min-width: 700px) {
-
-    .contenedorNavInf {
-        grid-template-columns: 33% 33% 33%;
+  
+    .footer__cities {
+      display: flex;
+      flex-wrap: wrap;
     }
-    .article {
-        grid-template-columns: 1fr 1fr 1fr;
-
+    .footer__city--branch {
+      flex: 2 1 auto;
+      width: 50%;
+      height: 200px;
+      justify-content: space-between;
+      justify-content: flex-start;
     }
-}
+    .footer__bottom--section {
+      display: flex;
+      justify-content: space-between;
+      flex-direction: row-reverse;
+      margin-top: 2em;
+    }
+    .footer__social--media {
+      display: flex;
+      margin: 0;
+    }
+  }
+  @media (min-width: 768px) and (max-width: 1024px) {
+    .main__content {
+      display: flex;
+      flex-wrap: wrap;
+    }
+    .main__imagen {
+      display: block;
+      position: relative;
+      max-width: 50%;
+    }
+    .main__figure {
+      padding: 3px;
+    }
+    .main__article {
+      margin: 3px;
+      max-width: 45%;
+    }
+  
+    .footer__text {
+      width: 65%;
+      margin-bottom: 2em;
+    }
+  }
 
-@media (max-width: 700px) and (min-width: 550px) {
+  /* apareix o desapareix header text */
+    @media (min-width: 1024px) and (max-width: 1460px) {
+    .header__text {
+      display: block;
+      padding: 0;
+      font-size: 13px;
+    }
+  }
 
-    .contenedorNavInf {
-        grid-template-columns: 50% 50%;
+  @media (min-width: 1024px) and (max-width:1460px) {
+    .header__text {
+      display: block;
+      padding: 0;
+      width: 30%;
+    }
+  
+    .main__content {
+      padding: 5px;
+      display: grid;
+      grid-template-columns: 25% 25% 25% 25%;
+      grid-template-rows: repeat(9, 1fr);
+      grid-auto-flow: dense;
+    }
+    .main__figure {
+      margin: auto;
+      padding: 3px;
+    }
+    .main__article {
+      margin: 3px;
+      min-height: auto;
+    }
+  
+    .img3 {
+        grid-row: span 2;
+        grid-column: span 2;
+    }
+  
+    .img5 {
+          grid-row: span 2;
+          grid-column: span 2;
+    }
+  
+    .img8 {
+          grid-row: span 2;
+          grid-column: span 2;
+    
+    }
+  
+    .img11 {
+          grid-row: span 2;
+          grid-column: span 2;
+    }
+  
+    .img16 {
+          grid-row: span 2;
+          grid-column: span 2;
+    }
+  
+    .footer__text {
+      width: 50%;
+    }
+    .footer__city--branch {
+      width: auto;
+      height: 200px;
+    }
+  }
+
+  @media (min-width: 1460px) {
+    .header__text {
+      display: block;
+      padding: 0;
+      width: 30%;
+    }
+  
+    .main__content {
+      padding: 5px;
+      display: grid;
+      grid-template-columns: 20% 20% 20% 20% 20%;
+      grid-template-rows: repeat(9, 1fr);
+      grid-auto-flow: dense;
+    }
+    .main__figure {
+      margin: auto;
+      padding: 3px;
+    }
+    .main__article {
+      margin: 3px;
+      min-height: auto;
+    }
+  
+    .img3 {
+      grid-row: span 2;
+      grid-column: span 2;
     }
 
-    .article {
-        grid-template-columns: 1fr 1fr;
+    .img5 {
+        grid-row: span 2;
+        grid-column: span 2;
+      }
 
-    }
-}
-
-
-@media (max-width: 550px) {
-
-    .contenedorNavInf {
-        grid-template-columns: 100%;
+    .img8 {
+        grid-row: span 2;
+        grid-column: span 2;
+  
     }
 
-    .head1 img {
-        width: 50%;
-        height: auto;
+    .img11 {
+        grid-row: span 2;
+        grid-column: span 2;
     }
 
-    .head2 img {
-        width: 50%;
-        height: auto;
+    .img16 {
+        grid-row: span 2;
+        grid-column: span 2;
     }
-
-    .article {
-        grid-template-columns: 1fr;
-
+  
+    .footer__cities{
+        padding: 15px;
     }
-}
+    .footer__text {
+      width: 50%;
+    }
+    .footer__city--branch {
+      width: auto;
+      height: 200px;
+    }
+  }
+  
